# isadora

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml
docs/: conf.py  contributing.rst  examples.rst  requirements.txt
docs/_build/doctrees/: changelog.doctree  contributing.doctree  environment.pickle  index.doctree
docs/_build/doctrees/api/: index.doctree
docs/_build/doctrees/api/conf/: index.doctree
docs/_build/doctrees/api/example/: index.doctree
docs/_build/doctrees/api/isadora/: index.doctree
docs/_build/doctrees/api/isadora/base/: index.doctree
docs/_build/doctrees/api/isadora/constants/: index.doctree
docs/_build/doctrees/api/isadora/units/: index.doctree
docs/_build/doctrees/api/test_isadora/: index.doctree
docs/_build/doctrees/autoapi/conf/: index.doctree
docs/_build/doctrees/autoapi/example/: index.doctree
docs/_build/doctrees/autoapi/isadora/base/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  contributing.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  examples.doctree  index.doctree
docs/_build/html/.doctrees/autoapi/: index.doctree
docs/_build/html/_sources/: changelog.rst.txt  index.rst.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_static/: custom.css
docs/_build/html/api/: index.html
docs/_build/html/api/conf/: index.html
docs/_build/html/api/example/: index.html
docs/_build/html/api/isadora/: index.html
docs/_build/html/api/test_isadora/: index.html
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/conf/: index.html
docs/_build/html/autoapi/example/: index.html
docs/_build/html/autoapi/isadora/: index.html
docs/_build/html/autoapi/test_isadora/: index.html
docs/api/: index.rst
docs/api/conf/: index.rst
docs/api/isadora/: index.rst
docs/api/isadora/constants/: index.rst
docs/autoapi/conf/: index.rst
docs/autoapi/example/: index.rst
docs/autoapi/isadora/base/: index.rst
docs/autoapi/isadora/units/: index.rst
examples/: example.py
isadora/: __init__.py  base.py  constants.py  units.py
isadora.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_ardc_reference.py  test_derived_quantities.py  test_isadora.py  test_physical_consistency.py  test_reference_atmospheres.py  test_units_and_invariance.py
(+12 files in other folders)
